wacom: Add both tablet and touchscreen devices on initial iteration

The GsdDeviceManager::device-added callback would observe both
display-attached tablets and touchscreens, but only the former were
added in the initial loop.

This made touchscreens not properly mapped to outputs, as touchscreens
are usually built into the device.

https://bugzilla.gnome.org/show_bug.cgi?id=787884